# streamlit

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  embedding_function.py  generate_response.py  inference.py  pyproject.toml  requirements.txt  setup.sh  streamlit_app.py  templates.py
api/: server.py
chat/: messages.py  templates.py
inference/: inference.py
vectorstore/: embed_function.py  load_dataset.py  pinecone_client.py
