[tool.poetry]
name = "streamlit2"
version = "0.1.0"
description = ""
authors = ["Richard Porteous <bakobiibizo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.0"
langchain = "^0.0.326"
openai = "^0.28.1"
tiktoken = "^0.5.1"
python-dotenv = "^1.0.0"
chroma = "^0.2.0"
chromadb = "^0.4.15"
loguru = "^0.7.2"
sentence-transformers = "^2.2.2"
nltk = "^3.8.1"
pinecone-client = "^2.2.4"
dataset = "^1.6.2"
datasets = "^2.14.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
